syntax = "proto3";

option java_multiple_files = true;
option java_package = "base.weather";
option java_outer_classname = "WeatherImpl";

package Weather;

// Service 2: WeatherService
service Weather {
    // Unary RPC Method 3: GetWeatherForecast
    rpc GetWeatherForecast (WeatherForecastRequest) returns (WeatherForecastResponse) {}
}

message WeatherForecastRequest {
    double latitude = 1;
    double longitude = 2;
}

message WeatherForecastResponse {
    double temperature = 1;
    double humidity = 2;
    double wind_speed = 3;
    double precipitation = 4;
    string timestamp = 5;
}

